client find address by zipcode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.password=pwd123
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+
+api.currency.key=ytk7aymeOeFL9SH5cqZ3wRixITlKrcqs
+api.currency.base_url=https://api.apilayer.com
+
+api.address.base_url=https://api.com.br
