--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 plugins {
 	id 'org.springframework.boot' version '3.0.0'
 	id 'io.spring.dependency-management' version '1.1.0'
-	id 'org.jetbrains.kotlin.jvm' version '1.7.21'
-	id 'org.jetbrains.kotlin.plugin.spring' version '1.7.21'
-	id 'org.jetbrains.kotlin.plugin.jpa' version '1.7.21'
+	id 'org.jetbrains.kotlin.jvm' version '1.8.0'
+	id 'org.jetbrains.kotlin.plugin.spring' version '1.8.0'
+	id 'org.jetbrains.kotlin.plugin.jpa' version '1.8.0'
+	id 'org.jetbrains.kotlin.kapt' version '1.8.0'
 }
 
 group = 'com.garbulha'
@@ -24,11 +25,11 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.0'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+	kapt 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 	testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final' // if you are using mapstruct in test code
 
 	runtimeOnly 'org.postgresql:postgresql'
